--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinyu Gao"
-  avatar           : "https://github.com/jinyugao/jinyugao.github.io/blob/master/images/IMG_0372.png"
+  avatar           : "IMG_0372.png"
   bio              : "RA at Peking University"
   location         : "Beijing, China"
   employer         :
