--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinyu Gao"
-  avatar           : "photo.png"
+  avatar           : "IMG_0372.png"
   bio              : 
   location         : "Beijing, China"
   employer         :
