--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinyu Gao"
-  avatar           : "IMG_0372.png"
+  avatar           : "images/3953273590_704e3899d5_m.jpg"
   bio              : "Bio"
   location         : "Beijing, China"
   employer         :
