--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : 
   email            : "http://gaojinyu111@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Jinyu-Gao-4"
-  uri              :
+  url              : "https://jinyugao.github.io"
   bitbucket        :
   codepen          :
   dribbble         :
