--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Jinyu Gao"
   avatar           : "IMG_0372.png"
   bio              : "Bio"
-  location         : "Beijing China"
+  location         : "Beijing, China"
   employer         :
   pubmed           : 
   googlescholar    : 
