--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jinyu Gao"
   avatar           : "IMG_0372.png"
-  bio              : "Bio"
+  bio              : 
   location         : "Beijing, China"
   employer         :
   pubmed           : 
