--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            :  "https://www.gaojinyu111@gmail.com"
+  email            :  "gaojinyu111@gmail.com"
   researchgate     :  "https://www.researchgate.net/profile/Jinyu-Gao-4"
   uri              :
   bitbucket        :
