--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinyu Gao"
-  avatar           : "IMG_0372_1.png"
+  avatar           : "IMG_9187.jpg"
   bio              : " "
   location         : "Beijing, China"
   employer         :
