--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Jinyu Gao"
   avatar           : "IMG_9187.jpg"
   bio              : " "
-  location         : "Beijing, China"
+  location         : "Tucson, Arizona"
   employer         :
   pubmed           : 
   googlescholar    : 
